# OgsDp

./: U_ANNOTATION_SUMMARY.md  U_CUSTOM_COMPONENTS_README.md  http2_proper_test.sh  integration_test_report_2025.md  integration_test_with_df.sh  integration_test_with_dnf.sh  integration_with_nrf.sh  mark_custom_components.sh  simple_http2_test.sh
configs/open5gs/: amf.yaml.in  ausf.yaml.in  bsf.yaml.in  df.yaml.in  dmf.yaml.in  dnf.yaml.in  dsmf.yaml.in  meson.build  smf.yaml.in
lib/app/: ogs-app.h  ogs-config.c
lib/pfcp/: context.h  xact.h
lib/proto/: event.h
lib/sbi/: context.h  message.c  types.c  types.h
lib/sbi/openapi/model/: nf_type.c  nf_type.h
src/: meson.build
src/amf/: context.c  context.h  ngap-handler.c  sbi-path.c  sbi-path.h
src/df/: U_CUSTOM_COMPONENT  app.c  context.c  context.h  df-sm.c  df-sm.h  dn3-path.c  dn3-path.h  event.c  event.h  init.c  meson.build  ndf-build.c  ndf-build.h  ndf-handler.c  ndf-handler.h  pfcp-path.c  pfcp-path.h  pfcp-sm.c  sbi-path.c  sbi-path.h  timer.c  timer.h
src/dmf/: U_CUSTOM_COMPONENT  app.c  context.c  context.h  dmf-sm.c  dmf-sm.h  event.c  event.h  handler.c  handler.h  init.c  meson.build  nnrf-handler.c  nnrf-handler.h  sbi-path.c  sbi-path.h  timer.c  timer.h
src/dnf/: U_CUSTOM_COMPONENT  app.c  context.c  context.h  dnf-sm.c  dnf-sm.h  event.c  event.h  gtpu-path.c  gtpu-path.h  init.c  meson.build  ndf-handler.c  ndf-handler.h  sbi-path.c  sbi-path.h  storage.c  storage.h  timer.c  timer.h
src/dsmf/: U_CUSTOM_COMPONENT  app.c  context.c  context.h  dn4-build.c  dn4-build.h  dn4-handler.c  dn4-handler.h  dsmf-sm.c  dsmf-sm.h  event.c  event.h  init.c  meson.build  pfcp-path.c  pfcp-path.h  pfcp-sm.c  sbi-path.c  sbi-path.h  timer.c  timer.h
src/upf/: init.c  n4-build.c
tools/: ran_proxy.py
